Adding an ASM-based example class dumper for a simple increment function.

--- a/rembulan-core/pom.xml
+++ b/rembulan-core/pom.xml
@@ -23,6 +23,13 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>5.0.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
