Updating the bytecode emitter to extend the function interface.

--- a/rembulan-tests/pom.xml
+++ b/rembulan-tests/pom.xml
@@ -22,6 +22,14 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>5.0.4</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
       <artifactId>rembulan-core</artifactId>
