Using LuaC to load function prototypes and generate bytecode out of them.

--- a/rembulan-core/pom.xml
+++ b/rembulan-core/pom.xml
@@ -30,6 +30,12 @@
         <version>5.0.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>5.0.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
