--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>rembulan-core</module>
     <module>rembulan-parser</module>
     <module>rembulan-tests</module>
+    <module>rembulan-benchmarks</module>
   </modules>
 
 </project>
