--- a/rembulan-lua-common/pom.xml
+++ b/rembulan-lua-common/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <groupId>net.sandius.rembulan</groupId>
-  <artifactId>rembulan-core</artifactId>
+  <artifactId>rembulan-lua-common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -28,24 +28,6 @@
       <groupId>net.sandius.rembulan</groupId>
       <artifactId>rembulan-util</artifactId>
       <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.sandius.rembulan</groupId>
-      <artifactId>rembulan-lua-bytecode</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>5.0.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-util</artifactId>
-      <version>5.0.4</version>
     </dependency>
 
   </dependencies>
