--- a/rembulan-core/pom.xml
+++ b/rembulan-core/pom.xml
@@ -32,20 +32,8 @@
 
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
-      <artifactId>rembulan-lua-bytecode</artifactId>
+      <artifactId>rembulan-lua-common</artifactId>
       <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>5.0.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-util</artifactId>
-      <version>5.0.4</version>
     </dependency>
 
   </dependencies>
