--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>rembulan-parent</module>
     <module>rembulan-util</module>
     <module>rembulan-lua-common</module>
     <module>rembulan-core</module>
