--- a/rembulan-benchmarks/pom.xml
+++ b/rembulan-benchmarks/pom.xml
@@ -3,25 +3,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.sandius.rembulan</groupId>
-  <artifactId>rembulan-benchmarks</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <parent>
+    <groupId>net.sandius.rembulan</groupId>
+    <artifactId>rembulan-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../rembulan-parent</relativePath>
+  </parent>
 
-  <!--
-     This is the demo/sample template build script for building Java benchmarks with JMH.
-     Edit as needed.
-  -->
+  <artifactId>rembulan-benchmarks</artifactId>
+  <version>${project.parent.version}</version>
+  <packaging>pom</packaging>
 
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
 
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jmh.version>1.11.2</jmh.version>
-    <javac.target>1.6</javac.target>
     <uberjar.name>benchmarks</uberjar.name>
   </properties>
 
@@ -43,23 +42,13 @@
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
       <artifactId>rembulan-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
   </dependencies>
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <compilerVersion>${javac.target}</compilerVersion>
-          <source>${javac.target}</source>
-          <target>${javac.target}</target>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
