--- a/rembulan-tests/pom.xml
+++ b/rembulan-tests/pom.xml
@@ -5,16 +5,18 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.sandius.rembulan</groupId>
+  <parent>
+    <groupId>net.sandius.rembulan</groupId>
+    <artifactId>rembulan-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../rembulan-parent</relativePath>
+  </parent>
+
   <artifactId>rembulan-tests</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>${project.parent.version}</version>
   <packaging>pom</packaging>
 
   <properties>
-
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    <encoding>UTF-8</encoding>
 
     <scala.binary.version>2.11</scala.binary.version>
     <scala.version>${scala.binary.version}.0</scala.version>
@@ -33,13 +35,13 @@
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
       <artifactId>rembulan-core</artifactId>
-      <version>${project.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
       <artifactId>rembulan-compiler</artifactId>
-      <version>${project.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
