Moving the LuaC interface to the parser module.

--- a/rembulan-tests/pom.xml
+++ b/rembulan-tests/pom.xml
@@ -45,6 +45,12 @@
     </dependency>
 
     <dependency>
+      <groupId>net.sandius.rembulan</groupId>
+      <artifactId>rembulan-parser</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
