--- a/rembulan-parser/pom.xml
+++ b/rembulan-parser/pom.xml
@@ -20,7 +20,7 @@
 
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
-      <artifactId>rembulan-core</artifactId>
+      <artifactId>rembulan-lua-bytecode</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
 
