Verifying generated class files before returning them.

--- a/rembulan-compiler/pom.xml
+++ b/rembulan-compiler/pom.xml
@@ -42,6 +42,12 @@
 
     <dependency>
       <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-analysis</artifactId>
+      <version>${asm.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
       <artifactId>asm-util</artifactId>
       <version>${asm.version}</version>
     </dependency>
