--- a/rembulan-parser/pom.xml
+++ b/rembulan-parser/pom.xml
@@ -20,10 +20,48 @@
 
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
+      <artifactId>rembulan-lua-common</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <!-- FIXME: don't depend on lua-bytecode, lua-common should be enough -->
+    <dependency>
+      <groupId>net.sandius.rembulan</groupId>
       <artifactId>rembulan-lua-bytecode</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
 
   </dependencies>
+
+  <build>
+    <plugins>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>javacc-maven-plugin</artifactId>
+        <version>2.6</version>
+
+        <executions>
+          <execution>
+            <id>javacc</id>
+            <goals>
+              <goal>javacc</goal>
+            </goals>
+          </execution>
+        </executions>
+
+        <dependencies>
+          <dependency>
+            <groupId>net.java.dev.javacc</groupId>
+            <artifactId>javacc</artifactId>
+            <version>6.1.2</version>
+          </dependency>
+        </dependencies>
+
+      </plugin>
+
+    </plugins>
+  </build>
+
 
 </project>
