Adding a simple typer that assigns types to vals.

--- a/rembulan-parser/pom.xml
+++ b/rembulan-parser/pom.xml
@@ -31,6 +31,12 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>net.sandius.rembulan</groupId>
+      <artifactId>rembulan-compiler</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
