--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <module>rembulan-util</module>
     <module>rembulan-lua-common</module>
     <module>rembulan-core</module>
-    <module>rembulan-lua-bytecode</module>
+    <module>rembulan-lbc</module>
     <module>rembulan-parser</module>
     <module>rembulan-compiler</module>
     <module>rembulan-tests</module>
