--- a/rembulan-lbc/pom.xml
+++ b/rembulan-lbc/pom.xml
@@ -12,7 +12,7 @@
     <relativePath>../rembulan-parent</relativePath>
   </parent>
 
-  <artifactId>rembulan-lua-bytecode</artifactId>
+  <artifactId>rembulan-lbc</artifactId>
   <version>${project.parent.version}</version>
   <packaging>jar</packaging>
 
