Adding the module rembulan-lbc-recompiler to the project structure.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>rembulan-lua-common</module>
     <module>rembulan-core</module>
     <module>rembulan-lbc</module>
+    <module>rembulan-lbc-recompiler</module>
     <module>rembulan-parser</module>
     <module>rembulan-compiler</module>
     <module>rembulan-tests</module>
