--- a/rembulan-tests/pom.xml
+++ b/rembulan-tests/pom.xml
@@ -45,7 +45,7 @@
 
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
-      <artifactId>rembulan-parser</artifactId>
+      <artifactId>rembulan-lua-parser</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
 
