Renaming rembulan-core to rembulan-runtime.

--- a/rembulan-standalone/pom.xml
+++ b/rembulan-standalone/pom.xml
@@ -20,7 +20,7 @@
 
     <dependency>
       <groupId>net.sandius.rembulan</groupId>
-      <artifactId>rembulan-core</artifactId>
+      <artifactId>rembulan-runtime</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
 
