--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <module>rembulan-parent</module>
     <module>rembulan-util</module>
     <module>rembulan-lua-common</module>
-    <module>rembulan-core</module>
+    <module>rembulan-runtime</module>
     <module>rembulan-compiler</module>
     <module>rembulan-tests</module>
     <module>rembulan-standalone</module>
