--- a/rembulan-runtime/pom.xml
+++ b/rembulan-runtime/pom.xml
@@ -12,7 +12,7 @@
     <relativePath>../rembulan-parent</relativePath>
   </parent>
 
-  <artifactId>rembulan-core</artifactId>
+  <artifactId>rembulan-runtime</artifactId>
   <version>${project.parent.version}</version>
   <packaging>jar</packaging>
 
