Adding the module rembulan-examples, adding a HelloWorld example to it.

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
     <module>rembulan-runtime</module>
     <module>rembulan-compiler</module>
     <module>rembulan-stdlib</module>
-    <module>rembulan-tests</module>
     <module>rembulan-standalone</module>
+
+    <module>rembulan-tests</module>
+    <module>rembulan-examples</module>
   </modules>
 
 </project>
