Configuring the deployment to Sonatype OSSRH.

--- a/rembulan-examples/pom.xml
+++ b/rembulan-examples/pom.xml
@@ -38,4 +38,19 @@
 
   </dependencies>
 
+  <build>
+    <plugins>
+
+      <!-- Don't deploy this module -->
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
+
 </project>
