--- a/rembulan-examples/pom.xml
+++ b/rembulan-examples/pom.xml
@@ -16,6 +16,29 @@
   <version>${project.parent.version}</version>
   <packaging>jar</packaging>
 
+  <name>Rembulan examples</name>
+  <description>Examples of the Rembulan API</description>
+  <url>https://github.com/mjanicek/rembulan/</url>
+  <inceptionYear>2016</inceptionYear>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Miroslav Janíček</name>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/mjanicek/rembulan.git</connection>
+    <url>https://github.com/mjanicek/rembulan/tree/master</url>
+  </scm>
+
   <dependencies>
 
     <dependency>
