--- a/rembulan-tests/pom.xml
+++ b/rembulan-tests/pom.xml
@@ -16,6 +16,29 @@
   <version>${project.parent.version}</version>
   <packaging>jar</packaging>
 
+  <name>Rembulan tests</name>
+  <description>Tests for the Rembulan project modules</description>
+  <url>https://github.com/mjanicek/rembulan/</url>
+  <inceptionYear>2016</inceptionYear>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Miroslav Janíček</name>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/mjanicek/rembulan.git</connection>
+    <url>https://github.com/mjanicek/rembulan/tree/master</url>
+  </scm>
+
   <properties>
     <scala.binary.version>2.11</scala.binary.version>
     <scala.version>${scala.binary.version}.0</scala.version>
