Tweaking Travis configuration to disable GPG signing for CI builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 sudo: false
 
-script: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V
-
 language: java
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip=true -B -V
 
 jdk:
   - openjdk7
