--- a/rembulan-parent/pom.xml
+++ b/rembulan-parent/pom.xml
@@ -147,8 +147,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.13</version>
+        <version>2.19.1</version>
         <configuration>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
           <useFile>false</useFile>
           <disableXmlReport>true</disableXmlReport>
           <includes>
