--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
     <module>rembulan-compiler</module>
     <module>rembulan-stdlib</module>
 
+    <module>rembulan-luajava</module>
+
     <module>rembulan-tests</module>
     <module>rembulan-examples</module>
 
