--- a/rembulan-standalone/pom.xml
+++ b/rembulan-standalone/pom.xml
@@ -60,6 +60,12 @@
     </dependency>
 
     <dependency>
+      <groupId>net.sandius.rembulan</groupId>
+      <artifactId>rembulan-luajava</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>jline</groupId>
       <artifactId>jline</artifactId>
       <version>2.14.2</version>
