--- a/rembulan-standalone/pom.xml
+++ b/rembulan-standalone/pom.xml
@@ -39,6 +39,10 @@
     <url>https://github.com/mjanicek/rembulan/tree/master</url>
   </scm>
 
+  <properties>
+    <standaloneFinalName>${project.artifactId}-${project.version}</standaloneFinalName>
+  </properties>
+
   <dependencies>
 
     <dependency>
@@ -75,6 +79,9 @@
 
   <build>
 
+    <!-- allowing command-line override -->
+    <finalName>${standaloneFinalName}</finalName>
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -87,28 +94,26 @@
 
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>appassembler-maven-plugin</artifactId>
-        <configuration>
-          <programs>
-            <program>
-              <mainClass>net.sandius.rembulan.standalone.RembulanConsole</mainClass>
-              <id>rembulan</id>
-            </program>
-          </programs>
-          <repositoryName>lib</repositoryName>
-          <useWildcardClassPath>true</useWildcardClassPath>
-          <repositoryLayout>flat</repositoryLayout>
-        </configuration>
+        <groupId>sg.enixsoft</groupId>
+        <artifactId>capsule-maven-plugin</artifactId>
+        <version>1.3.0</version>
         <executions>
           <execution>
-            <phase>package</phase>
             <goals>
-              <goal>assemble</goal>
+              <goal>build</goal>
             </goals>
+            <configuration>
+              <appClass>net.sandius.rembulan.standalone.RembulanConsole</appClass>
+              <chmod>true</chmod>
+              <includeApp>true</includeApp>
+              <includeCompileDep>false</includeCompileDep>
+              <includeRuntimeDep>true</includeRuntimeDep>
+              <includeTransitiveDep>true</includeTransitiveDep>
+            </configuration>
           </execution>
         </executions>
       </plugin>
+
     </plugins>
 
   </build>
